[gd_scene load_steps=3 format=3 uid="uid://bm8moysqd5ift"]

[ext_resource type="Script" path="res://Scripts/change_scene.gd" id="1_7u67y"]
[ext_resource type="Texture2D" uid="uid://b071wk4h2dqvh" path="res://Assets/bgs/bg_r_13.png" id="2_77v2s"]

[node name="LoadSave" type="Node2D"]

[node name="Change scene" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_7u67y")

[node name="background" type="Sprite2D" parent="."]
position = Vector2(579, 325)
scale = Vector2(0.803309, 0.803309)
texture = ExtResource("2_77v2s")

[node name="Slot1" type="Button" parent="."]
offset_left = 163.0
offset_top = 60.0
offset_right = 968.0
offset_bottom = 176.0
text = "Save slot 1"

[node name="Slot2" type="Button" parent="."]
offset_left = 165.0
offset_top = 209.0
offset_right = 970.0
offset_bottom = 325.0
text = "Save slot 2"

[node name="Slot3" type="Button" parent="."]
offset_left = 166.0
offset_top = 361.0
offset_right = 971.0
offset_bottom = 477.0
text = "Save slot 3"

[node name="Back" type="Button" parent="."]
offset_left = 451.0
offset_top = 527.0
offset_right = 658.0
offset_bottom = 596.0
text = "Back"

[connection signal="pressed" from="Slot1" to="Change scene" method="_on_slot_1_pressed"]
[connection signal="pressed" from="Back" to="Change scene" method="_on_back_pressed"]
